@@ -8,6 +8,7 @@
 	    - more efficient [of_ustring]
 	    - add efficient iterators, implement some TODO with them
 	    - bugfix: [compare] and [icompare] where wrong
+	    - prevent [lchop] and [rchop] from failing
 
 	* src/syntax/pa_strings/pa_strings.ml:
 	    - compile-time validation of utf8 strings
